--- a/mdp-lcode-backend/mdp-sys/src/main/resources/application-dev.yml
+++ b/mdp-lcode-backend/mdp-sys/src/main/resources/application-dev.yml
@@ -202,7 +202,7 @@ spring:
           #password: zchcgl123!@#
           #driver-class-name: com.mysql.cj.jdbc.Driver
 
-          url: jdbc:mysql://127.0.0.1:3306/adm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT
+          url: jdbc:mysql://127.0.0.1:3306/adm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=GMT%2B8
           username: root
           password: 123456
           driver-class-name: com.mysql.cj.jdbc.Driver
